# app-top-bar

./: ARCHITECTURE.md  CLAUDE.md  README.ja.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  server-settings.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appbar.rs  config.rs  lib.rs  main.rs  server.rs  tray.rs
