[package]
name = "app-top-bar"
version = "0.2.0"
description = "Desktop top bar widget that reserves screen space"
authors = ["Amane Katagiri"]
edition = "2021"

[lib]
name = "app_top_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
url = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.13.2", features = ["rustls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }
